--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.73",
         "php-ffmpeg/php-ffmpeg": "^1.3",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-fractal": "^6.3"
     },
     "require-dev": {
