--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "nesbot/carbon": "^2.73",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "pusher/pusher-php-server": "^7.2",
-        "spatie/laravel-fractal": "^6.3"
+        "spatie/laravel-fractal": "^6.3",
+        "tymon/jwt-auth": "2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
